Add gradient color change log